ParkerStaging/KubePR/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: parker-blazor-service
spec:
  type: ClusterIP
  selector:
    app: blazorapp
  ports:
    - port: 80
      targetPort: 8080
