ParkerStaging/KubePR/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: parker-blazor-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: $PULL_REQUEST_ID.parker-tickets-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parker-blazor-service
            port:
              number: 80
